--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
   <title>LibreQDA</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <script type="text/javascript" src="./node_modules/auth0-js/build/auth0.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body>
-  <app-root></app-root>
+<body class="custom">
+  <app-root style="display: block; height: 100%"></app-root>
 </body>
 
 </html>
