--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="custom">
-  <app-root style="display: block; height: 100%"></app-root>
+  <app-root></app-root>
 </body>
 
 </html>
