syles, copy option, calculate column count

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="custom">
-    <app-root style="overflow-y:hidden"></app-root>
+    <app-root style="height:100vh"></app-root>
 </body>
 
 </html>
